Fix bug with overflow

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -7,7 +7,6 @@ h1 {
   display: flex;
   flex-direction: row;
   height: 100%;
-  overflow: hidden;
 }
 
 .gutter:hover {
